--- a/views/index.html
+++ b/views/index.html
@@ -69,10 +69,10 @@
                 <button id="logoutBtn"> LOG UD </button>
 
                 <br><br>
-                <div class="menuSpacer"></div>
                 
                 <div class="menu-nav">
-                    <a id="frontpageMenu"> FORSIDE </a>
+                    <div class="menuSpacer"></div>
+                    <a id="frontpageMenu" class="active"> FORSIDE </a>
                     <div class="menuSpacer"></div>
                     <a id="profileMenu"> MIN PROFIL </a>
                     <div class="menuSpacer"></div>
