--- a/views/index.html
+++ b/views/index.html
@@ -201,10 +201,27 @@
             </div>
 
             <p id="exploreMatches"> </p>
-            <div id="userInfoSection"></div>
 
+
+            
         </section>
+        
+        
+        <!-- Specific User -->
+        <div id="specificMatchOverlay" class="overlay">
+            
+            <section id="specificMatchSection" class="specific-match">
 
+                <div class="match-overlay-header">
+                    <button id="specficMatchClose" class="match-overlay-close"> < </button> <!-- replace with icon-image  -->
+                    <h1 class="overlay-h1"> Specific Match </h1>
+                </div>
+
+                <div id="userInfoSection"></div>
+            </section>
+        </div>
+
+        
         <br>
 
 
