--- a/views/css/style.css
+++ b/views/css/style.css
@@ -623,6 +623,7 @@ input[type="checkbox"]:checked + .toggleSwitch::before {
 .profileContainer {
     align-items: center;
     text-align: center;
+    margin-bottom: 0.5rem;
 }
 
 .profilePicture {
@@ -657,6 +658,25 @@ input[type="checkbox"]:checked + .toggleSwitch::before {
     font-size: 14px;
     color: var(--colorDarkText);
 }
+
+
+
+.match-progress-bar {
+    width: 100%;
+    height: 10px;
+    background-color: var(--colorGreyLight);  /* Light grey background */
+    border-radius: 5px;
+    overflow: hidden;
+    margin-top: 10px;
+}
+
+.match-progress-bar .filled {
+    height: 100%;
+    background-color: var(--colorYellow);  /* Yellow fill color */
+    width: 0%;  /* Initially set to 0% */
+    transition: width 0.3s ease;  /* Smooth transition for progress */
+}
+
 
 
 
