--- a/views/index.html
+++ b/views/index.html
@@ -279,9 +279,12 @@
                 <!-- Icebreaker  -->
                 <section class="icebreaker">
     
-                    <h1> Icebreaker </h1>
+                    <div class="icebreaker-header">
+                        <button id="shuffleIcebreaker"> Shuffle </button>
+                        <h1> MeDR Icebreaker </h1>
+                    </div>
+
                     <div id="icebreaker"></div>
-                    <button id="shuffleIcebreaker"> Shuffle </button>
     
                 </section>
     
