View and close specific chat

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -457,7 +457,7 @@ input[type="checkbox"]:checked + .toggleSwitch::before {
 /* SPECIFIC CHAT */
 
 #chatOverlay {
-    /* display: none; */
+    display: none;
 }
 
 
