Chat profile name

--- a/views/index.html
+++ b/views/index.html
@@ -264,31 +264,31 @@
          <!-- Specific Chat  -->
          <div id="chatOverlay" class="overlay"> 
             
-            <div class="overlay-header">
-                <button id="chatClose" class="overlay-close"> < </button> <!-- replace with icon-image  -->
-                <h1 class="overlay-h1"> Bagedyst Eksepert </h1>
+            <div class="chat-overlay-header">
+                <button id="chatClose" class="chat-overlay-close"> < </button> <!-- replace with icon-image  -->
+                <img class="chatProfilePicture" src="img/profile.jpg" alt="logo">
+                <div id="chatHeader" class="overlay-h1"> </div>
             </div>
             
             <section>
 
                 <div id="message-timeline"></div>
-                <div id="message-input"></div>
-
+                
                 <br><br>
-    
+                
                 <!-- Icebreaker  -->
                 <section class="icebreaker">
-    
+                    
                     <div class="icebreaker-header">
                         <button id="shuffleIcebreaker"> Shuffle </button>
                         <h1> MeDR Icebreaker </h1>
                     </div>
 
                     <div id="icebreaker"></div>
-    
+                    
                 </section>
-    
-                <br><br>
+                
+                <div id="message-input"></div>
 
 
             </section>
