--- a/views/css/style.css
+++ b/views/css/style.css
@@ -461,6 +461,65 @@ input[type="checkbox"]:checked + .toggleSwitch::before {
 }
 
 
+.chat-overlay-header {
+    background-color: var(--colorBackground);
+    padding: 2rem 2rem 1rem 1rem;
+    box-shadow: 0px 10px 6px rgba(0, 0, 0, 0.2);
+    color: var(--colorDarkText);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.chat-overlay-h1 {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.chat-overlay-close {
+    background-color: var(--colorBackground);
+    color: var(--colorDarkText);
+    border: none;
+    top: 0;
+    left: 0;
+    font-size: 14px;
+}
+
+.chatProfileContainer {
+    text-align: center;
+    margin-bottom: 0.5rem;
+}
+
+.chatProfilePicture {
+    width: 10%;
+    border-radius: 50px;
+    margin-left: 1rem;
+    margin-right: 0.5rem;
+}
+
+.chatMultiNames {
+    display: flex;
+    flex-direction: column;
+    margin: 0; /* Ensure there's no margin applied to the container */
+    padding: 0; /* Ensure there's no padding applied to the container */
+}
+
+.chatProfileName, .chatProfileNickname {
+    margin: 0; /* Remove any default margin applied to <p> elements */
+    padding: 0; /* Remove any padding applied to <p> elements */
+    line-height: 1.1; /* Tighten the line height */
+}
+
+.chatProfileName {
+    color: var(--colorGreyDark);
+    font-size: 12px;
+}
+
+.chatProfileNickname {
+    color: var(--colorDarkText);
+    font-size: 18px;
+}
+
 
 
 /* /////////////////////////////////////////////////////////////////////////// */
