--- a/views/index.html
+++ b/views/index.html
@@ -275,20 +275,24 @@
                 <div id="message-timeline"></div>
                 
                 <br><br>
-                
-                <!-- Icebreaker  -->
-                <section class="icebreaker">
-                    
-                    <div class="icebreaker-header">
-                        <button id="shuffleIcebreaker"> Shuffle </button>
-                        <h1> MeDR Icebreaker </h1>
-                    </div>
 
-                    <div id="icebreaker"></div>
+                <div class="message-input">
+
+                    <!-- Icebreaker  -->
+                    <section id="icebreakerSection" class="icebreaker">
+                        
+                        <div class="icebreaker-header">
+                            <button id="shuffleIcebreaker"> Shuffle </button>
+                            <h1> MeDR Icebreaker </h1>
+                        </div>
+    
+                        <div id="icebreaker"></div>
+                        
+                    </section>
                     
-                </section>
-                
-                <div id="message-input"></div>
+                    <div id="message-input"></div>
+                    
+                </div>
 
 
             </section>
