--- a/views/index.html
+++ b/views/index.html
@@ -76,9 +76,9 @@
                     <div class="menuSpacer"></div>
                     <a id="profileMenu"> MIN PROFIL </a>
                     <div class="menuSpacer"></div>
-                    <a id="chatsMenu"> MINE CHATS </a>
+                    <a id="chatsMenu"> MINE BESKEDER </a>
                     <div class="menuSpacer"></div>
-                    <a id="matchesMenu"> MINE MATCHES </a>
+                    <a id="matchesMenu"> MINE CHATS </a>
                 </div>
 
                 <div class="menuSpacer"></div>
@@ -244,7 +244,7 @@
             
             <div class="overlay-header">
                 <button id="chatsClose" class="overlay-close"> < </button> <!-- replace with icon-image  -->
-                <h1 class="overlay-h1"> Mine chats </h1>
+                <h1 class="overlay-h1"> Mine beskeder </h1>
             </div>
             
             <section class="matching-users">
