--- a/views/index.html
+++ b/views/index.html
@@ -299,7 +299,27 @@
 
         </div>
 
+
+        <!-- All Matches  -->
+        <div id="matchesOverlay" class="overlay"> 
+            
+            <div class="overlay-header">
+                <button id="matchesClose" class="overlay-close"> < </button> <!-- replace with icon-image  -->
+                <h1 class="overlay-h1"> Mine chats </h1>
+            </div>
+            
+            <section>
+
+                <div id="adminChats"></div>
+
+            </section>
+
+        </div>
+
         
+
+
+
 
 
 
