--- a/views/css/style.css
+++ b/views/css/style.css
@@ -612,7 +612,36 @@ input[type="checkbox"]:checked + .toggleSwitch::before {
 }
 
 
+.match-entry {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--colorGreyLight);
+    padding: 1rem;
+    color: var(--colorDarkText);
+}
 
+.match-text-block {
+    display: flex;
+    justify-content: space-between; /* This ensures space between the username and the status + button */
+    align-items: center;
+    width: 100%;
+}
+
+.match-name-displayer {
+    margin-right: auto; /* Aligns the name to the left */
+}
+
+.delete-chat-button {
+    background-color: var(--colorRed);
+    border: none;
+    color: var(--colorDarkText);
+    padding: 5px;
+}
+
+.chat-status, .delete-chat-button {
+    margin-left: 10px; /* Adds some space between status and button */
+}
+  
 
 
 /* /////////////////////////////////////////////////////////////////////////// */
