--- a/views/index.html
+++ b/views/index.html
@@ -58,9 +58,8 @@
                     <a> <strong> MEDR </strong> </a>
                 </div>
                 
-                <button id="hamburgerMenu"> ☰ </button>
-                <button id="chats"> 💬 </button>
-                <!-- <button id="hamburgerMenu"> X </button> -->
+                <button id="hamburgerMenu"> <img src="img/icons/burger-black.png" alt="menu"> </button>
+                <button id="chats"> <img src="img/icons/chat-black.png" alt="chats"> </button>
             </div>
 
             <!-- HAMBURGERMENU -->
@@ -108,7 +107,7 @@
             <section id="userProfileSection" class="user-profile">
                 <!-- PROFILE INFO -->
                 <div class="overlay-header">
-                    <button id="profileClose" class="overlay-close"> < </button> <!-- replace with icon-image  -->
+                    <button id="profileClose" class="overlay-close"> <img src="img/icons/leftarrow-white.png" alt="arrow"> </button> <!-- replace with icon-image  -->
                     <h1 class="overlay-h1"> Profil </h1>
                 </div>
                 
@@ -183,7 +182,7 @@
 
             <div class="section-header">
                 <h1> Seneste opdateringer </h1>
-                <h1> > </h1> <!-- replace with icon-image  -->
+                <img src="img/icons/rightarrow-white.png" alt="arrow"> 
             </div>
 
             <div id="logNotifications"></div>
@@ -197,7 +196,7 @@
 
             <div class="section-header">
                 <h1> Udforsk matches </h1>
-                <h1> > </h1> <!-- replace with icon-image  -->
+                <img src="img/icons/rightarrow-black.png" alt="arrow"> 
             </div>
 
             <p id="exploreMatches"> </p>
@@ -227,9 +226,9 @@
             <div class="interests-overview-header">
                 <div class="section-header">
                     <h1> Dine matches er baseret på </h1>
-                    <!-- <h1> > </h1> replace with icon-image  -->
+                    <img src="img/icons/rightarrow-black.png" alt="arrow">  
                 </div>
-                <button id="changeInterest"> ✎ Ændre </button>
+                <button id="changeInterest"> <img src="img/icons/pen-red.png" alt="arrow"> </button>
             </div>
 
             <div id="matchingInterestsContainer"></div>
@@ -243,7 +242,7 @@
         <div id="chatsOverlay" class="overlay"> 
             
             <div class="overlay-header">
-                <button id="chatsClose" class="overlay-close"> < </button> <!-- replace with icon-image  -->
+                <button id="chatsClose" class="overlay-close"> <img src="img/icons/leftarrow-white.png" alt="arrow">  </button> 
                 <h1 class="overlay-h1"> Mine beskeder </h1>
             </div>
             
@@ -304,7 +303,7 @@
         <div id="matchesOverlay" class="overlay"> 
             
             <div class="overlay-header">
-                <button id="matchesClose" class="overlay-close"> < </button> <!-- replace with icon-image  -->
+                <button id="matchesClose" class="overlay-close"> <img src="img/icons/leftarrow-white.png" alt="arrow"> </button> <!-- replace with icon-image  -->
                 <h1 class="overlay-h1"> Mine chats </h1>
             </div>
             
