--- a/views/css/style.css
+++ b/views/css/style.css
@@ -55,11 +55,12 @@
 
 .overlay-header {
     background-color: var(--colorBlue);
-    padding: 2rem 2rem 1rem 1rem;
+    padding: 1.5rem 0rem 0.5rem 0.5rem;
     display: flex;
-    gap: 0.5rem;
+    /* gap: 0.5rem; */
     flex-direction: row;
     box-shadow: 0px 10px 6px rgba(0, 0, 0, 0.2);
+    align-items: center;
 }
 
 .overlay-h1 {
@@ -70,10 +71,11 @@
 .overlay-close {
     background-color: var(--colorBlue);
     border: none;
-    top: 0;
-    left: 0;
-    font-size: 14px;
-    color: var(--colorLightText);
+    padding-top: 10px;
+}
+
+.overlay-close img {
+    width: 2rem;
 }
 
 /* /////////////////////////////////////////////////////////////////////////// */
@@ -216,9 +218,27 @@
 
 .section-header {
     display: flex;
-    gap: 1rem;
-    margin-bottom: 1rem;
+    /* gap: 1rem; */
+    margin-bottom: 0.5rem;
+    align-items: center;
 }
+
+.section-header img {
+    width: 2rem;
+}
+
+#hamburgerMenu img {
+    width: 2rem;
+}
+
+#chats img {
+    width: 2rem;
+}
+
+#changeInterest img {
+    width: 2rem;
+}
+
 
 /* /////////////////////////////////////////////////////////////////////////// */
 /* BURGER MENU */
@@ -255,8 +275,8 @@
 }
 
 .dr-nav {
-    color: var(--colorLightText);
-    border-bottom: 1px var(--colorLightText) solid;
+    color: var(--colorDarkText);
+    border-bottom: 1px var(--colorDarkText) solid;
     width: 17rem;
     padding-bottom: 5px;
     margin-left: 2rem;
@@ -655,9 +675,13 @@ input[type="checkbox"]:checked + .toggleSwitch::before {
 }
 
 .log-notifications h1 {
-    margin-top: 10px;
-    margin-bottom: -10px;
+    /* margin-top: 10px; */
+    margin-bottom: -20px;
     color: var(--colorLightText);
+}
+
+.log-notifications img {
+    margin-top: 20px;
 }
 
 .notifications-container {
@@ -882,14 +906,6 @@ input[type="checkbox"]:checked + .toggleSwitch::before {
 }
 
 
-
-
-
-
-
-
-
-
 /* /////////////////////////////////////////////////////////////////////////// */
 /* INTERESTS OVERVIEW */
 
@@ -905,14 +921,15 @@ input[type="checkbox"]:checked + .toggleSwitch::before {
     display: flex;
     flex-direction: row;
     align-content: center;
-    gap: 2rem;
+    justify-content: space-between;
 }
 
 .interests-overview-header button {
     color: var(--colorRed);
     border: none;
     padding: 0;
-    margin-top: -1rem;
+    margin-top: -0.5rem;
+    margin-right: 1rem;
 }
 
 #matchingInterestsContainer {
