--- a/views/index.html
+++ b/views/index.html
@@ -136,37 +136,37 @@
 
                     <form id="interestForm" class="toggleInterest">
                         <div class="toggleContainer">
-                            <span class="icon">👁️</span>
+                            <img src="img/icons/movie-black.png" alt="tv">
                             <label for="checkDSB">Den Store Bagedyst</label>
                             <input id="checkDSB" type="checkbox" data-interest-id="1" />
                             <span class="toggleSwitch"></span>
                         </div>
                         <div class="toggleContainer">
-                            <span class="icon">👁️</span>
+                            <img src="img/icons/movie-black.png" alt="tv">
                             <label for="checkAME">Alle Mod En </label>
                             <input id="checkAME" type="checkbox" data-interest-id="2" />
                             <span class="toggleSwitch"></span>
                         </div>
                         <div class="toggleContainer">
-                            <span class="icon">👁️</span>
+                            <img src="img/icons/movie-black.png" alt="tv">
                             <label for="checkKDT">Kender Du Typen</label>
                             <input id="checkKDT" type="checkbox" data-interest-id="3" />
                             <span class="toggleSwitch"></span>
                         </div>
                         <div class="toggleContainer">
-                            <span class="icon">👁️</span>
+                            <img src="img/icons/eye-black.png" alt="tv">
                             <label for="checkTVA">TVA</label>
                             <input id="checkTVA" type="checkbox" data-interest-id="4" />
                             <span class="toggleSwitch"></span>
                         </div>
                         <div class="toggleContainer">
-                            <span class="icon">💰</span>
+                            <img src="img/icons/podcast-black.png" alt="tv">
                             <label for="checkGenstart">Genstart</label>
                             <input id="checkGenstart" type="checkbox" data-interest-id="5" />
                             <span class="toggleSwitch"></span>
                         </div>
                         <div class="toggleContainer">
-                            <span class="icon">🎵</span>
+                            <img src="img/icons/podcast-black.png" alt="tv">
                             <label for="checkSara">Sara Og Monopolet</label>
                             <input id="checkSara" type="checkbox" data-interest-id="6" />
                             <span class="toggleSwitch"></span>
