--- a/views/css/style.css
+++ b/views/css/style.css
@@ -559,6 +559,13 @@ input[type="checkbox"]:checked + .toggleSwitch::before {
     font-size: 18px;
 }
 
+/* /////////////////////////////////////////////////////////////////////////// */
+/* DISPLAY MESSAGE */
+
+.message-entry {
+    color: var(--colorDarkText);
+}
+
 
 /* /////////////////////////////////////////////////////////////////////////// */
 /* MESSAGE INPUT */
