--- a/views/css/style.css
+++ b/views/css/style.css
@@ -266,6 +266,7 @@
 
 .burger-menu button {
     background-color: var(--colorDrRed);
+    color: var(--colorLightText);
     font-size: 12px;
     padding: 5px;
     padding-left: 20px;
