--- a/views/css/style.css
+++ b/views/css/style.css
@@ -587,7 +587,7 @@ input[type="checkbox"]:checked + .toggleSwitch::before {
 }
 
 .message-text {
-    background-color: var(--colorRed);
+    background-color: var(--colorGreen);
     color: var(--colorDarkText);
     padding: 10px;
     width: 50%;
