--- a/views/index.html
+++ b/views/index.html
@@ -282,7 +282,10 @@
                         
                         <div class="icebreaker-header">
                             <button id="shuffleIcebreaker"> Shuffle </button>
-                            <h1> MeDR Icebreaker </h1>
+                            <div class="icebreaker-title">
+                                <img src="img/icons/ice-white.png" alt="ice">
+                                <h1> MeDR Icebreaker </h1>
+                            </div>
                         </div>
     
                         <div id="icebreaker"></div>
